--- a/manifest/service.yaml
+++ b/manifest/service.yaml
@@ -10,7 +10,7 @@ spec:
       port: 80
       targetPort: 80
   sessionAffinity: None
-  type: LoadBalancer  # Change to NodePort if LoadBalancer is not available
+  type: ClusterIP
 
 ---
 kind: Service
