--- a/manifest/service.yaml
+++ b/manifest/service.yaml
@@ -6,10 +6,14 @@ spec:
   selector:
     app: webapi
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
-      targetPort: 80
-  sessionAffinity: None
+      targetPort: 8080
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: 8080
   type: ClusterIP
 
 ---
