--- a/manifest/service.yaml
+++ b/manifest/service.yaml
@@ -6,15 +6,11 @@ spec:
   selector:
     app: webapi
   ports:
-    - name: http
-      protocol: TCP
+    - protocol: TCP
       port: 80
-      targetPort: 8080
-    - name: https
-      protocol: TCP
-      port: 443
-      targetPort: 8080
-  type: ClusterIP
+      targetPort: 80
+  sessionAffinity: None
+  type: LoadBalancer  # Change to NodePort if LoadBalancer is not available
 
 ---
 kind: Service
