--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -37,6 +37,8 @@ spec:
       labels:
         app: webapi
     spec:
+      nodeSelector:
+        team: analytics
       containers:
         - name: webapi
           image: shahzeb799/testapi:build-38
